[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/img/sprites/Player/Blasto_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://assets/Scripts/Player/BulletRifle.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5, 6.5 )

[node name="BulletRifle" type="Node2D"]
script = ExtResource( 2 )
target = "player"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -41, 2 )
rotation = 3.14159
scale = Vector2( 2.14571, 1.88281 )
texture = ExtResource( 1 )
hframes = 3
vframes = 6
frame = 14

[node name="BulletArea" type="Area2D" parent="."]
position = Vector2( 0, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletArea"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="CollisionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="area_entered" from="BulletArea" to="." method="_on_BulletArea_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CollisionTimer" to="." method="_on_CollisionTimer_timeout"]
